fixed some broken css in app.ss

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@ body {
 
   
   .movie {
-    width: 200px;
-    height: 280px;
+    width: 280px;
+    height: 400px;
     margin: 5px;
     position: relative;
     border-radius: 12px;
